--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "Task\\": "module/Task/src/"
         }
     },
     "autoload-dev": {
